@@ -140,6 +140,9 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
   Johannes Weberhofer
   - Patches to fix some compiler warnings
 
+  Drew Wells
+  - Patch to vdelivermail to accept relative Maildir paths
+
 5.4.28 - Released 10-Mar-2009
    Matt Brookings
    - Updated vlimits_read_vlimits_file to be much more efficient
